=== 1.0.0 / 2014-01-15

* Moved from zucker 13.1 gem into its own gem
